<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="112dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_launcher_background" />
    
    <TextView
        android:id="@+id/username"
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"/>
    
    <TextView
        android:id="@+id/user_class"
        android:layout_width="100dp"
        android:layout_height="16dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_class"/>

    <Button
        android:id="@+id/github_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/github_link"
        tools:text="Github" />

</FrameLayout>
    
    